src/Components/About/About.css
@import url('https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,700');
@import url('https://fonts.googleapis.com/css?family=Work+Sans:700,800');
@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:100,200,300');

* {
  padding: 0;
  margin: 0;
}

#container {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

/* Landing Styles */

#landing {
  height: 380px;
  width: 100%;
  position: relative;
  overflow: hidden;
  background-color: #e13838;
}

#landing_banner {
  width: 1280px;
  float: right;
}

#fizz_logo {
  min-height: 280px;
  position: absolute;
  left: 51%;
  top: 15%;
}

#description-container {
  font-family: 'Roboto Condensed', sans-serif;
  font-weight: 100;
  color: white;
  margin-left: 4%;
  position: absolute;
  top: 12%;
  width: 40%;
  max-width: 600px;
}

#description-body {
  border-left: 2px solid white;
  padding-left: 20px;
  font-size: 1.1em;
  line-height: 1.1em;
}

#description-head {
  font-weight: 500;
  text-transform: uppercase;
  font-size: 1.9em;
  font-weight: 500;
  letter-spacing: 1px;
  margin-left: 25px;
  margin-bottom: 25px;
}



/* Announcement Styles */

#announcements {
  width: 100%;
  background-color: #F8F8F8;
  font-family: 'Roboto Condensed', sans-serif;
  font-size: 1.2em;
  font-weight: 200;
}

#announcement-container {
  width: 80%;
  margin-top: 50px;
  margin-right: auto;
  margin-left: auto;
}

#announcement-header {
  text-transform: uppercase;
  font-family: 'Work Sans';
  color: #919191;
  text-align: center;
}

#announcement-body {
  margin-top: 40px;
}

.announcement-card {
  margin-right: 10px;
  margin-bottom: 10px;
  color: #43464c;
  padding: 10px;
  height: 400px;
}

.announcement-description {
  margin-top: 10px;
}

.announcement-card h3 {
  width: 100%;
  text-align: center;
  border-bottom: 1px solid grey;
}

@media only screen and (max-width: 1280px) {
  #landing_banner {
    float: left;
  }  
}

@media only screen and (max-width: 760px) {
  #fizz_logo {
    display: none;
  }

  #landing_banner {
    display: none;
  }

  #description-container {
    position: relative;
    width: auto;
    padding: 40px 20px 40px 0
  }

  #landing {
    height: auto;
    min-height: 380px;
  }

  #announcement-header {
    font-size: 1.4em;
  }
}

@media only screen and (max-width: 880px) {
  #description-body {
    font-size: 1em;
  }
}

